<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePedirCilindros"
    android:background="@color/BackgroundAlternativo">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:textColor="@color/Gris4"
            android:drawablePadding="5dp"
            android:fontFamily="@font/verdana"
            android:gravity="center_vertical"
            android:text="@string/elegir"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_next_azul" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:drawablePadding="5dp"
            android:fontFamily="@font/verdana"
            android:gravity="center_vertical"
            android:text="@string/verificar"
            android:textColor="@color/grisDefault"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_next_gris" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:drawablePadding="5dp"
            android:fontFamily="@font/verdana"
            android:gravity="center_vertical"
            android:text="@string/solicitar"
            android:textColor="@color/grisDefault"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_next_gris" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        style="@style/CardView"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView"/>
    </androidx.cardview.widget.CardView>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img30kg"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"

                        android:layout_margin="5dp"
                        android:src="@drawable/cil30kg" />


                    <TextView
                        android:id="@+id/title30kg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="5dp"
                        android:layout_toEndOf="@id/img30kg"
                        android:fontFamily="@font/verdana"
                        android:text="@string/cilindro30kg"
                        android:textColor="@color/primaryDarkColor"
                        android:textSize="18sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>



    </LinearLayout>






    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_gris_azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:backgroundTint="@null"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@null"
                android:gravity="center"
                android:text="@string/total00"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btnPedir"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@drawable/btn_verde"
                android:gravity="center"
                android:text="Siguiente"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>